--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "~3.2.6",
     "request": "~2.21.0",
-    "xmldoc": "~0.1.2"
+    "xmldoc": "~0.1.2",
+    "jquery": "~1.8.3"
   }
 }
